docs/7.52/md/abennews-752-amdp.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) →  [Changes in Releases 7.5x](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-75.htm) →  [Changes in Release 7.52](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-752.htm) → 

AMDP in Release 7.52

[1\. Reference to ABAP types](#!ABAP_MODIFICATION_1@1@)
[
2\. AMDP options](#!ABAP_MODIFICATION_2@2@)
[
3\. Logical HDI schemas](#!ABAP_MODIFICATION_3@3@)

Modification 1

Reference to ABAP Types

When an [AMDP method](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_method_glosry.htm "Glossary Entry") is implemented in an AMDP class with SQLScript, the following new [AMDP macro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_macro_glosry.htm "Glossary Entry")

["$ABAP.type( \[name =\] abap\_type )"](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_abap_types.htm)

can be used to reference ABAP types. The ABAP runtime environment replaces these schemas on the database with the associated database types.

Modification 2

AMDP Options

The new addition [AMDP OPTIONS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_amdp_options.htm) for [METHODS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods.htm) and [CLASS-METHODS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapclass-methods.htm) statements can be used to define attributes of [AMDP methods](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_method_glosry.htm "Glossary Entry") in their declaration:

-   The [READ-ONLY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_amdp_options.htm) option only allows reads in the implementation of the AMDP methods.
    
-   The [CDS SESSION CLIENT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmethods_amdp_options.htm) option sets the [session variable](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensession_variable_glosry.htm "Glossary Entry") of the database that can be addressed under the name[$session.client](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_f1_session_variable.htm) in the [CDS DDL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_ddl_glosry.htm "Glossary Entry") of the [ABAP CDS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_cds_glosry.htm "Glossary Entry") to a particular value when the method is called from ABAP. It avoids the warning from the syntax check and the exception CX\_AMDP\_CDS\_CLIENT\_MISMATCH when an AMDP method accesses the [CDS database view](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_database_view_glosry.htm "Glossary Entry") of a [CDS view](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_view_glosry.htm "Glossary Entry") whose [client handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_client_handling.htm) is determined by the annotation [@ClientHandling.algorithm: #SESSION\_VARIABLE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencds_client_handling.htm).
    

Modification 3

Logical HDI Schemas

Alongside the existing [logical database schemas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_database_schema_glosry.htm "Glossary Entry"), [logical HDI schemas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_hdi_glosry.htm "Glossary Entry") can now be used as further [logical schemas](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlogical_schema_glosry.htm "Glossary Entry") in the [AMDP macro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_macro_glosry.htm "Glossary Entry") [$ABAP.schema](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamdp_logical_db_schemas.htm). The mapping of a physical database schema to a logical HDI schema is made sin the definition of an [ABAP-managed HDI container](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenamhc_glosry.htm "Glossary Entry"), which itself links [HDI objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenhdi_object_glosry.htm "Glossary Entry") to the [Change and Transport System (CTS)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencts_glosry.htm "Glossary Entry").